packages/kit/test/apps/basics/src/routes/load/invalidation/url/+page.svelte
<script>
	/** @type {import('./$types').PageData} */
	export let data;
</script>

<h1>{data.a}</h1>

<a href="?a=1">1</a>
<a href="?a=2">2</a>
<a href="?a=3">3</a>
